# gitdoctor

./: .gitignore  ADVANCED_FEATURES.md  ANNOUNCEMENT_EMAIL.txt  CONFLUENCE_HANDBOOK.txt  CONFLUENCE_PAGE.html  CONFLUENCE_PAGE.md  CONFLUENCE_PAGE_FORMATTED.txt  DATE_RANGE_REQUIREMENT.md  DELTA_GUIDE.md  DEMO_COMMANDS.sh  DEMO_COMMANDS_QUICK.txt  DEMO_SCRIPT.md  DEVELOPMENT_RULES.md  EXPLICIT_MODE_GUIDE.md  INTEGRATION_TESTING_GUIDE.md  JIRA_TEAMS_SETUP.md  MR_CHANGES_GUIDE.md  PROJECT_CONFIGURATION.md  QUICKSTART.md  README.md  README_COMVIVA.md  TEAM_QUICKSTART.md  TESTING_SUMMARY.md  TEST_JIRA_TEAMS.md  TROUBLESHOOTING.md  YOUR_TESTING_GUIDE.md  config-explicit.yaml  config.comviva.yaml  config.example.yaml  find_commit_projects.py  gitlab-tests.postman_collection.json  list_projects.py  push-both.sh  pyproject.toml  requirements.txt  test-report.html  test_token.py
gitdoctor/: __init__.py  api_client.py  cli.py  commit_finder.py  config.py  delta_exporter.py  delta_finder.py  jira_integration.py  models.py  mr_changes_exporter.py  mr_changes_finder.py  mr_finder.py  notifications.py  project_resolver.py
scripts/: check_secrets.py  pre-commit  test_comprehensive.sh
tests/: __init__.py  test_api_client.py  test_commit_finder.py  test_config.py  test_delta_finder.py  test_mr_finder.py  test_project_resolver.py
