[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitdoctor"
version = "1.0.0"
description = "GitDoctor - A CLI tool to map Git commit SHAs to GitLab repositories with rich metadata"
authors = [{name = "Platform Engineering Team"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["gitlab", "git", "commits", "mapping", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.23.0",
]

[project.scripts]
gitdoctor = "gitdoctor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitdoctor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["gitdoctor"]
